added download link

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,7 @@
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="#">Dropdown link</a></li>
-            <li><a href="#">Dropdown link</a></li>
+            <li><a href="https://github.com/samsteam/samsteam.github.io/releases">Select OS</a></li>
           </ul>
         </div>
         <a class="btn btn-primary" ui-sref="about">ABOUT</a>
