added button to add preset requirements instead of loading them automatically

--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -23,6 +23,7 @@
 		</div><!-- /Back-Forward buttons -->
 
 		<div class="row data-input">
+			<button type="button" name="button" ng-click="loadDefault()">Load some requirements</button>
 			<div class="page-header">
 				<h3>Processes:</h3>
 			</div>
