--- a/templates/about.html
+++ b/templates/about.html
@@ -29,7 +29,7 @@
 
       <div class="col-xs-offset-1 col-xs-10">
         <div class="page-header" style="border-top:1px solid #ddd;border-bottom:0px;margin-top:0px">
-          <h1 style="text-align:center; "><small><< </small>Devteam<small> >></small></h1>
+          <h1 style="text-align:center; "><small><< </small>{{ 'ABOUT_TITLE' | translate }}<small> >></small></h1>
         </div>
       </div>
 
