added ES translation for home and about

--- a/templates/about.html
+++ b/templates/about.html
@@ -41,9 +41,9 @@
 
             <!-- Nav tabs -->
             <ul class="nav nav-pills" role="tablist">
-              <li role="presentation" class="active"><button class="btn btn-primary" data-target="#samsInfo" aria-controls="samsInfo" role="tab" data-toggle="tab">About SAMS</button></li>
-              <li role="presentation"><button class="btn btn-primary" data-target="#tutorial" aria-controls="tutorial" role="tab" data-toggle="tab">Tutorial</button></li>
-              <li role="presentation"><button class="btn btn-primary" data-target="#samsGit" aria-controls="samsGit" role="tab" data-toggle="tab">GitHub</button></li>
+              <li role="presentation" class="active"><button class="btn btn-primary" data-target="#samsInfo" aria-controls="samsInfo" role="tab" data-toggle="tab">{{ 'ABOUT_SAMS' | translate }}</button></li>
+              <li role="presentation"><button class="btn btn-primary" data-target="#tutorial" aria-controls="tutorial" role="tab" data-toggle="tab">{{ 'TUTORIAL' | translate }}</button></li>
+              <li role="presentation"><button class="btn btn-primary" data-target="#samsGit" aria-controls="samsGit" role="tab" data-toggle="tab">{{ 'GITHUB' | translate }}</button></li>
             </ul>
             <!-- /Nav tabs -->
             <!-- Tab panes -->
@@ -52,7 +52,7 @@
               <div role="tabpanel" class="tab-pane fade in active" id="samsInfo">
                 <div class="panel panel-body panel-about">
                   <div class="page-header">
-                    <h1>About SAMS <small style="color:#488FE7">and it's roots</small></h1>
+                    <h1>{{ 'ABOUT_ABOUTSAMS_TITLE' | translate }}</h1>
                   </div>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare lobortis posuere. Aliquam sem leo, dignissim vel nunc non, iaculis molestie eros. Nam elementum sem sit amet sapien porta, id fermentum libero ultricies. Aliquam erat volutpat. Morbi semper sem in quam pellentesque scelerisque. Morbi at nisl at nunc faucibus faucibus id sed nunc. Nulla imperdiet magna in finibus varius. Sed gravida ex quis sapien venenatis, pellentesque dictum tortor placerat. Praesent elementum augue sed erat dictum interdum. Pellentesque porttitor tortor sit amet diam pulvinar elementum. Nunc venenatis suscipit massa vel dictum.
@@ -76,7 +76,7 @@
               <div role="tabpanel" class="tab-pane fade" id="tutorial">
                 <div class="panel panel-body panel-about">
                   <div class="page-header">
-                    <h1>Tutorial <small style="color:#488FE7">for the slows learners</small></h1>
+                    <h1>{{ 'ABOUT_TUTORIAL_TITLE' | translate }}</h1>
                   </div>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare lobortis posuere. Aliquam sem leo, dignissim vel nunc non, iaculis molestie eros. Nam elementum sem sit amet sapien porta, id fermentum libero ultricies. Aliquam erat volutpat. Morbi semper sem in quam pellentesque scelerisque. Morbi at nisl at nunc faucibus faucibus id sed nunc. Nulla imperdiet magna in finibus varius. Sed gravida ex quis sapien venenatis, pellentesque dictum tortor placerat. Praesent elementum augue sed erat dictum interdum. Pellentesque porttitor tortor sit amet diam pulvinar elementum. Nunc venenatis suscipit massa vel dictum.
@@ -100,7 +100,7 @@
               <div role="tabpanel" class="tab-pane fade" id="samsGit">
                 <div class="panel panel-body panel-about">
                   <div class="page-header">
-                    <h1>Project's Github Information <small style="color:#488FE7">Fork it!</small></h1>
+                    <h1>{{ 'ABOUT_GITHUB_TITLE' | translate }}</h1>
                   </div>
                   <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare lobortis posuere. Aliquam sem leo, dignissim vel nunc non, iaculis molestie eros. Nam elementum sem sit amet sapien porta, id fermentum libero ultricies. Aliquam erat volutpat. Morbi semper sem in quam pellentesque scelerisque. Morbi at nisl at nunc faucibus faucibus id sed nunc. Nulla imperdiet magna in finibus varius. Sed gravida ex quis sapien venenatis, pellentesque dictum tortor placerat. Praesent elementum augue sed erat dictum interdum. Pellentesque porttitor tortor sit amet diam pulvinar elementum. Nunc venenatis suscipit massa vel dictum.
