--- a/templates/home.html
+++ b/templates/home.html
@@ -4,20 +4,20 @@
         <h1 class="title">SAMS</h1>
     </div>
     <div class="col-sm-12 text-center">
-      <h2 class="subtitle">Some AWESOME memory scheduler</h2>
+      <h2 class="subtitle">Some AWESOME Memory Scheduler</h2>
       <!-- app + about buttons -->
       <div class="btn-group group-spaceless" role="group" aria-label="...">
-        <a class="btn btn-large btn-info" ui-sref="step.requirements">TRY</a>
+        <a class="btn btn-large btn-info" ui-sref="step.requirements">{{ 'HOME_START' | translate }}</a>
         <div class="btn-group" role="group" ng-hide="isDesktopApp">
           <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Download
+            {{ 'HOME_DOWNLOAD' | translate }}
             <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
             <li><a href="https://github.com/samsteam/samsteam.github.io/releases">Select OS</a></li>
           </ul>
         </div>
-        <a class="btn btn-primary" ui-sref="about">ABOUT</a>
+        <a class="btn btn-primary" ui-sref="about">{{ 'HOME_ABOUT' | translate }}</a>
       </div>
     </div>
 
