--- a/templates/policies.html
+++ b/templates/policies.html
@@ -3,9 +3,9 @@
 		<!--Breadcrumb, step: 3  -->
 		<nav>
 			<ol class="cd-multi-steps text-top">
-				<li class="visited"><em>Requirement</em></li>
-				<li class="current"><em>Policies</em></li>
-				<li><em>Resolution</em></li>
+				<li class="visited"><em>{{ 'BREADCRUMB_REQUIREMENTS' | translate }}</em></li>
+				<li class="current"><em>{{ 'BREADCRUMB_POLICIES' | translate }}</em></li>
+				<li><em>{{ 'BREADCRUMB_RESOLUTION' | translate }}</em></li>
 			</ol>
 		</nav>
 		<!-- /breacrumbs -->
