--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -6,9 +6,9 @@
 			<!--Breadcrumb, position: 1  | /REQUIREMENTES/algorithm/policies/resolution -->
 			<nav>
 				<ol class="cd-multi-steps text-top">
-					<li class="current"><em>Requirement</em></li>
-					<li><em>Policies</em></li>
-					<li><em>Resolution</em></li>
+					<li class="current"><em>{{ 'BREADCRUMB_REQUIREMENTS' | translate }}</em></li>
+					<li><em>{{ 'BREADCRUMB_POLICIES' | translate }}</em></li>
+					<li><em>{{ 'BREADCRUMB_RESOLUTION' | translate }}</em></li>
 				</ol>
 			</nav>
 		</div><!-- /breacrumbs -->
