--- a/templates/resolution.html
+++ b/templates/resolution.html
@@ -4,9 +4,9 @@
 		<!--Breadcrumb, step 4 -->
 			<nav>
 				<ol class="cd-multi-steps text-top">
-					<li class="visited"><em>Requirement</em></li>
-					<li class="visited"><em>Policies</em></li>
-					<li class="current"><em>Resolution</em></li>
+					<li class="visited"><em>{{ 'BREADCRUMB_REQUIREMENTS' | translate }}</em></li>
+					<li class="visited"><em>{{ 'BREADCRUMB_POLICIES' | translate }}</em></li>
+					<li class="current"><em>{{ 'BREADCRUMB_RESOLUTION' | translate }}</em></li>
 				</ol>
 			</nav>
 		<!-- /breacrumbs -->
