--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 <div id="home" class="col-xs-12">
+  <div class="pull-right col-xs-1 text-right" ng-include src="'templates/partials/locale-button.html'"></div>
   <div class="panel panel-body panel-default" style="padding-top: 80px; padding-bottom: 80px">
     <div class="col-sm-12">
         <h1 class="title">SAMS</h1>
@@ -20,6 +21,5 @@
         <a class="btn btn-primary" ui-sref="about">{{ 'HOME_ABOUT' | translate }}</a>
       </div>
     </div>
-
   </div>
 </div>
