--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -23,7 +23,7 @@
 		</div><!-- /Back-Forward buttons -->
 
 		<div class="row data-input">
-			<button type="button" name="button" ng-click="loadDefault()">Load some requirements</button>
+			<button class="btn btn-primary" type="button" name="button" ng-click="loadDefault()">{{ 'EXAMPLE' | translate }}</button>
 			<div class="page-header">
 				<h3>Processes:</h3>
 			</div>
