--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -29,7 +29,12 @@
 			</div>
 			<div class="input-group">
 				<span class="input-group-addon">Processes</span>
-				<input type="text" class="form-control grey-color" placeholder="Processes' names" name="name" ng-model="inputProcesses">
+				<input type="text"
+							 pattern="([\w{1}][,]{0,1}){1,}"
+							 class="form-control grey-color"
+							 placeholder="Processes' names"
+							 name="name"
+							 ng-model="inputProcesses">
 			</div>
 
 			<div ng-hide="!processes.length" class="pages-per-process">
