Added ER for check correct name of process

--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -30,7 +30,7 @@
 			<div class="input-group">
 				<span class="input-group-addon">Processes</span>
 				<input type="text"
-							 pattern="([\w{1}][,]{0,1}){1,}"
+							 pattern="([a-zA-Z][,]{0,1}){1,}"
 							 class="form-control grey-color"
 							 placeholder="Processes' names"
 							 name="name"
