--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -68,7 +68,7 @@
 
 					<div class="input-group">
 						<label for="mode">Mode:</label>
-				    <select class="form-control" ng-model="s.mode" name="mode" ng-change="changeMode(s)">
+				    <select class="form-control" ng-model="s.mode" name="mode" ng-change="changeMode(s)" ng-disabled="!s.process">
 				      <option ng-repeat="m in modes"
 											value="{{m}}"
 											ng-selected="s.mode==m"
