--- a/templates/policies.html
+++ b/templates/policies.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-default" ng-init="init()">
 	<div class="panel-body">
 		<!--Breadcrumb, step: 3  -->
 		<nav>
