--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -1,5 +1,5 @@
 
-<div class="panel panel-default col-xs-12">
+<div class="panel panel-default col-xs-12" ng-init="init()">
 	<div class="panel-body">
 
 		<div class="row">
