Added button to reset. Code refactoring

--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -24,6 +24,7 @@
 
 		<div class="row data-input">
 			<button class="btn btn-primary" type="button" name="button" ng-click="loadDefault()">{{ 'EXAMPLE' | translate }}</button>
+			<button class="btn btn-danger" type="button" name="button" ng-click="resetAll()">{{ 'RESET' | translate }}</button>
 			<div class="page-header">
 				<h3>Processes:</h3>
 			</div>
