fix collision function name

--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -23,8 +23,8 @@
 		</div><!-- /Back-Forward buttons -->
 
 		<div class="row data-input">
-			<button class="btn btn-primary" type="button" name="button" ng-click="loadDefault()">{{ 'EXAMPLE' | translate }}</button>
-			<button class="btn btn-danger" type="button" name="button" ng-click="resetAll()">{{ 'RESET' | translate }}</button>
+			<button class="btn btn-primary" type="button" ng-click="loadDefault()">{{ 'EXAMPLE' | translate }}</button>
+			<button class="btn btn-danger" type="button" ng-click="resetAll()">{{ 'RESET' | translate }}</button>
 			<div class="page-header">
 				<h3>Processes:</h3>
 			</div>
@@ -117,7 +117,7 @@
 		</div>
 
 		<div class="row buttons-sequence">
-	  	<input type="button" class="btn btn-sm btn-danger pull-right" name="name" value="Preview page requirements" ng-click="previewRequirements()">
+	  	<input type="button" class="btn btn-sm btn-danger pull-right" value="Preview page requirements" ng-click="previewAllRequirements()">
 		</div><!-- add sequence -->
 
 	  <div class="row well grey-color">
