Added events when scheduler is processing

--- a/templates/policies.html
+++ b/templates/policies.html
@@ -15,7 +15,7 @@
 				<a class="btn btn-primary btn pull-right" ui-sref="step.requirements"><span class="glyphicon glyphicon-chevron-left"></span></a>
 			</div>
 			<div class="col-sm-6">
-				<a class="btn btn-primary btn" ui-sref="step.resolution"><span class="glyphicon glyphicon-chevron-right"></span></a>
+				<a class="btn btn-primary btn" ng-click="next()"><span class="glyphicon glyphicon-chevron-right"></span></a>
 			</div>
 		</div>
 		<!-- /Back-Forward buttons -->
